--- a/parque aquatico.html
+++ b/parque aquatico.html
@@ -13,51 +13,18 @@
 
 <body>
     <header> <!-- parte de menu -->
-        <img class="tartuga" alt="logo tartaruga" src="img/Logo00.png" width="100" height="90">
         <nav>
-            <div id="menu">
-            <details>
-                <summary>Ingressos</summary> <!--parte do menu-->
-                <p><ins>Entrada</ins></p>
-                <p><ins>Excursoes</ins></p>
-                <p><ins>Comprar</ins></p>
-            </details>
-            <details>
-                <summary>Parque</summary>
-                <p><ins>Sobre Nos</ins></p>
-                <p><ins>Atraçoes</ins></p>
-            </details>
-            <details>
-                <summary>Contato</summary>
-                <p><ins>Fale Conosco</ins></p>
-                <p><ins>Trabalhe Conosco</ins></p>
-            </details>
-            </div>
-            <!--<ul id="menu">
-                <li><a class="li" href="#">Ingressos</a></li>
-                <li><a class="li" href="#">Parque</a></li>
-                <li><a class="li" href="#">Contato</a></li>
-            </ul> -->
         </nav>
     </header>
         
-        <img src="img/parque aquatico.jpeg" width="1481" height="730"> <!-- imagem do fundo -->
-
-    <section id="sesao"> <!-- parte de segundo menu -->
-        <p class="titulo-2">~ Atraçoes ~</p> 
+    <section> <!-- parte de segundo menu -->
         <article>
-            <ul class="menu-2">
-                <li class="li">Parte Infantil</li>
-                <li class="li">Pista de surfe</li>
-                <li class="li">Toboaguas</li>
-            </ul> 
         </article>
     </section>
 
     <aside></aside>
    
    <footer>
-      localizaçao:
    </footer>
 </body> 
 </html>
