--- a/parque aquatico.html
+++ b/parque aquatico.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Coral Fantasy</title>
-    <link rel="icon" type="image" href="img/Logo00.png"> <!-- icon do titulo -->
+    <link rel="icon" type="image" href="img/icon2.png"> <!-- icon do titulo -->
     <link rel="stylesheet" 
 	      type="text/css"  
 		  href="CSS/parque.css"> <!-- acesso a parte css (parque.css)-->
