--- a/parque aquatico.html
+++ b/parque aquatico.html
@@ -9,11 +9,13 @@
 		  href="CSS/parque.css"> <!-- acesso a parte css (parque.css)-->
     
 </head>
-
 <body>
     <header> <!-- parte de menu -->
-        <nav>
-        </nav>
+        <div id="menu">
+            <nav>
+            </nav>
+        </div>
+        <div id="Cimg"></div>
     </header>
         
     <section> <!-- parte de segundo menu -->
